// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Test should render the checkbox 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
    />
  </div>
</div>
`;

exports[`Checkbox Test should render the checkbox with checked false 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
    />
  </div>
</div>
`;

exports[`Checkbox Test should render the checkbox with checked true 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
    />
  </div>
</div>
`;

exports[`Checkbox Test should render the checkbox with children 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c4 {
  margin-left: 8px;
  color: #161616;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c5:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
    />
  </div>
  <div
    className="c4 sc-dlnjPT c4 css-text-901oao"
    dir="auto"
  >
    Hello World
  </div>
</div>
`;

exports[`Checkbox Test should render the checkbox with disabled false 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c4:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Checkbox Test should render the checkbox with disabled true 1`] = `
.c2 {
  width: 15px;
  height: 15px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 img {
  width: 15px;
  height: 15px;
}

.c3 {
  width: 15px;
  height: 15px;
  background-color: transparent;
  border-radius: 2px;
  background-size: 6px;
  background-repeat: no-repeat;
  background-position: center;
}

.c4:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c0:focus .c1 {
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  aria-disabled={true}
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="checkbox"
>
  <div
    aria-disabled={true}
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={true}
  >
    <div
      aria-disabled={true}
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={true}
    />
  </div>
</div>
`;
